# olymp_gcc

./: 0_to_i-1_12  1.cpp  1.txt  2.txt  CMakeCache.txt  CMakeLists.txt  Diagno.h  Makefile  antidfs.txt  cmake_install.cmake  compile_commands.json  connect.py  damn  damn10  damn11  damn12  damn13  damn15  damn9  g  g.ftl  geodeb.h  good.cpp  good2.cpp  hh.txt  his  his.ans  input.txt  main  message (3).txt  mnozh_first.txt  my  my.ans  nvm  nvm.txt  output.txt  shit.py  sol  sol.cpp  stable.py
.fleet/: run.json
algo/: debug.h
sol.dSYM/Contents/Resources/DWARF/: sol
sol.dSYM/Contents/Resources/Relocations/aarch64/: sol.yml
