cmake_minimum_required(VERSION 3.26)
project(olymp_gcc)

MATH(EXPR stack_size "512 * 1024 * 1024" OUTPUT_FORMAT HEXADECIMAL)
message(STATUS "${stack_size}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-stack_size,${stack_size}")
set(CMAKE_CXX_STANDARD 20)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftrapv")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLO")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GLIBCXX_DEBUG")
endif()
add_executable(olymp_gcc sol.cpp)
